added customized quote of the day using database

--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
           Welcome, <span id="name-goes-here">friend </span>!
         </h1>
         <hr />
-        <p>You have logged into GiantHikes!</p>
+        <p>Quote of the day: <span id="quote-goes-here"></span></p>
       </div>
     </div>
 
